# evaporate

./: Cargo.toml  LICENSE  README.md
src/: address_book.rs  constants.rs  contacts.rs  main.rs  manifest.rs  messages.rs  photos.rs
